[gd_scene load_steps=8 format=3 uid="uid://bd1rc4uds6mw0"]

[ext_resource type="Script" path="res://Dialog System/scenes/DialogUI.gd" id="1_ipek5"]
[ext_resource type="Texture2D" uid="uid://dmvp3akg1c31h" path="res://Art Aseets/UI/Talk-export.png" id="1_n45y3"]
[ext_resource type="Texture2D" uid="uid://dk012l6xv6uao" path="res://Art Aseets/UI/BlackMediumCircleBoxWithBorder_27x27.png" id="2_yagxh"]
[ext_resource type="Texture2D" uid="uid://1nuka8ut5kj" path="res://Placeholder/wood_1.png" id="4_q5wqv"]
[ext_resource type="AudioStream" uid="uid://sw5xl53icg1x" path="res://Art Aseets/UI/beep.wav" id="5_imvqg"]
[ext_resource type="Script" path="res://Dialog System/Info_Dialo.gd" id="6_mwpvi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sku0r"]
atlas = ExtResource("1_n45y3")
region = Rect2(978.682, 577.292, 493.026, 173.631)

[node name="DialogUI" type="CanvasGroup"]
script = ExtResource("1_ipek5")

[node name="NameLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="TextLabel" type="RichTextLabel" parent="."]
z_index = 1
offset_left = -124.0
offset_top = -64.0
offset_right = 161.0
offset_bottom = 70.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "YOOOOO"

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_sku0r")

[node name="Portrait_Background" type="Sprite2D" parent="."]
position = Vector2(-240, 1)
scale = Vector2(8, 8)
texture = ExtResource("2_yagxh")

[node name="Portrait" type="TextureRect" parent="Portrait_Background"]
offset_left = -14.25
offset_top = -12.125
offset_right = 231.75
offset_bottom = 251.875
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_q5wqv")
stretch_mode = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_imvqg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08

[node name="Info" type="RichTextLabel" parent="."]
offset_left = -146.0
offset_top = 47.0
offset_right = 1439.0
offset_bottom = 352.0
scale = Vector2(0.2, 0.2)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Press F to advance"
script = ExtResource("6_mwpvi")
